--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.32",
     "@types/react-dom": "18.0.11",
+    "bootstrap": "^5.2.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "material-icons": "^1.13.4",
+    "mdb-react-ui-kit": "^6.0.0",
     "next": "13.2.4",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
     "typescript": "5.0.3"
   }
