--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.32",
     "@types/react-dom": "18.0.11",
-    "bootstrap": "^5.2.3",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.3.5",
+    "bootstrap": "^5.2.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "js-cookie": "^3.0.1",
@@ -29,6 +30,7 @@
     "react-bootstrap": "^2.7.4",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.10.0",
     "typescript": "5.0.3"
   }
 }
